ADICIONANDO FEATURE METRICAS